# mkprj

./: Cargo.toml  README.md
src/: check_update.rs  main.rs  new_project.rs  types.rs
